# BUS-TICKETING-and-SEATING-ALLOCATION-SYSTEM

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.txt  pyproject.toml  requirements.txt  vercel.json
CITYBUS/: README.md  README.txt  vercel.json
CITYBUS/backend/: __init__.py  main.py  requirements.txt
CITYBUS/backend/auth/: __init__.py
CITYBUS/backend/database/: __init__.py
CITYBUS/backend/routers/: auth_user.py  qr.py  schedules.py
CITYBUS/backend/schemas/: __init__.py  booking.py  route.py  (+2 more)
CITYBUS/frontend/: index.html  styles.css
CITYBUS_FIXED/: .gitignore  README.md  vercel.json
CITYBUS_FIXED/backend/: __init__.py  app.py  routers.rar
backend/: .env.example  .env.example.txt  __init__.py  app.py  main.py  requirements.txt
backend/auth/: __init__.py  jwt_handler.py  password.py  role_guard.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py
backend/routers/: __init__.py  auth_employee.py  auth_user.py  bookings.py  finance.py  payments.py  qr.py  routes.py  schedules.py
backend/schemas/: __init__.py  booking.py  employee.py  finance.py  payment.py  qr.py  route.py  schedule.py  user.py
backend/utils/: __init__.py  qr_generator.py
database/: supabase_schema.sql
frontend/: index.html  styles.css
frontend/employee/: admin-dashboard.html  finance-dashboard.html  login.html  operator-dashboard.html  reports.html  routes.html  schedules.html  users.html
frontend/js/: app.js
frontend/user/: booking.html  confirmation.html  dashboard.html  history.html  login.html  payment.html  profile.html  register.html
(+20 files in other folders)
