[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citybus-backend"
version = "1.0.0"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn[standard]==0.22.0",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "asyncpg>=0.29.0",
    "databases==0.6.0",
    "pydantic==1.10.7",
    "qrcode==7.3",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "aiohttp>=3.10.0"
]

[tool.vercel]
entrypoint = "backend.main:app"